src/objects/VF_Reports__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Separate each Operating Group with a ,</inlineHelpText>
        <label>Operating Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groups__c</fullName>
        <inlineHelpText>Separate each group with a #.</inlineHelpText>
        <label>Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of the report which will display on the page</description>
        <label>Display Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this if it&apos;s a Standard Report</inlineHelpText>
        <label>Standard Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <label>link</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>VF Reports</label>
</CustomObject>